# Scilla

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp  notes.txt  resources.txt
assets/shaders/: fragment_shader.frag  procedural_sky.frag  skybox.vert  terrain.frag  terrain.vert  vegetation.frag  vegetation.vert  vertex_shader.vert
glad/: glad.c  glad.h
notes/: code_notes.txt  notes.md  resources.txt
shaders/: fragment_shader2.frag  fragment_shader2.glsl  shader.cpp  shader.h  vertex_shader.vert
src/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  FrameTimer.cpp  FrameTimer.h  InputHandler.cpp  InputHandler.h  Shader.h  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  main.cpp  shader.cpp  shader.h
src/camera/: Camera.cpp  Camera.h  CameraUBO.cpp  CameraUBO.h
src/core/: AssetManager.cpp  AssetManager.h  Engine.cpp  Engine.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/graphics/: Cube.h  EBO.cpp  EBO.h  InstancedModel.cpp  InstancedModel.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Skybox.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/graphics/buffers/: EBO.h  InstanceBuffer.cpp  InstanceBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VAO.cpp  VAO.h  VBO.h
src/input/: InputHandler.cpp  InputHandler.h
src/shaders/: fragment_shader.frag  lightSource.frag  vertex_shader.vert
src/utils/: FrameTimer.cpp  FrameTimer.h  Math.h
src/world/: SceneObject.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  TerrainGenerator.cpp  TerrainGenerator.h  VegetationPlacer.cpp  VegetationPlacer.h
